[package]
name = "skyline-config"
version = "0.3.0"
authors = ["Raytwo <raytwo@arcropolis.com>"]
edition = "2018"

[dependencies]
skyline = "0.6"
thiserror = "1"

serde = { version = "1", optional = true }
serde_json = { version = "1", optional = true }
serde_toml = { package="toml", version = "0.5", optional = true }
serde_yaml = { version = "0.8", optional = true }


[features]
default = ["json"]
json = ["serde", "serde_json"]
toml = ["serde", "serde_toml"]
yaml = ["serde", "serde_yaml"]
